assets/css/styles.css
body {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    font-size: 18px;
    line-height: 34px;
    color: #777777;
    background-image: url("../images/full-bloom.png");
}

* {
    box-sizing: border-box;
}

.container {
    width: 100%;
    max-width: 960px;
    margin: 0 auto;
    clear: both;
}

h1,
h2,
h3,
p {
    margin-bottom: 20px;
}

p: :last-child {
    margin-bottom: 0;
}

h1,
h2,
h3 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: 700;
    color: #4aaaa5;
}

h1 {
    padding-bottom: 20px;
    font-size: 30px;
    line-height: 49px;
    border-bottom: 3px solid #dddddd;
}

h2,
h3 {
    font-size: 22px;
}

#masthead {
    position: fixed;
    z-index: 99;
    width: 100%;
    margin: 0 0 30px;
    overflow: auto;
    color: #ffffff;
    background: #ffffff;
    border-bottom: 2px solid #cccccc;
    
}

#logo {
    /* float: left; */
    width: 350px;
    height: 90px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 30px;
    font-weight: 700;
    line-height: 90px;
    color: #ffffff;
    text-align: center;
    text-decoration: none;
    background: #4aaaa5;
}

nav {
    /* float: right; */
    width: 100%;
}

nav a {
    display: inline-block;
    padding-left: 15px;
    margin-left: 15px;
    line-height: 18px;
    color: #999;
    text-decoration: none;
    border-left: 1px solid #efefef;
}

nav a:first-child {
    border-left: 0 none;
}

footer {
    padding: 30px 0;
    clear: both;
    font-size: 12px;
    color: #ffffff;
    color: #cccccc;
    text-align: center;
    background: #666666;
    border-top: 8px solid #4aaaa5;
    height: 50px;
}

h3, h2 {
    padding-bottom: 20px;
    margin-bottom: 15px;
    line-height: 22px;
    border-bottom: 2px solid #eeeeee;
}

#main-container {
    padding-top: 130px;
    min-height: calc(100vh - 70px);
}

.work {
    position: relative;
    float: left;
    width: 274px;
    margin: 20px 0 25px;
    overflow: auto;
}

.work img {
    width: 100%;
    border: 0 none;
    opacity: 0.8;
}

.work h3 {
    position: absolute;
    bottom: 20px;
    width: 100%;
    padding: 15px;
    margin-bottom: 0;
    font-weight: 300;
    line-height: 30px;
    color: #ffffff;
    text-align: center;
    background: #4aaaa5;
    border-bottom: 0;
}

.auth-image {
    float: left;
    width: 200px;
    height: auto;
    margin-top: 10px;
    margin-right: 25px;
}

#contact-form ul {
    margin-bottom: 10px;
}

#contact-form li {
    margin-bottom: 10px;
}

label,
input[type=text],
input[type=email],
textarea {
    display: block;
    width: 100%;
}

input[type=text],
input[type=email],
textarea {
    height: 35px;
    padding: 0 10px;
    font-size: 14px;
    border: 1px solid #dddddd;
}

textarea {
    height: 200px;
}

input[type=submit] {
    padding: 10px 30px;
    font-size: 18px;
    color: #ffffff;
    cursor: pointer;
    background: #4aaaa5;
    border: 0 none;
}

#navbarNav {
    /* width: 100%;
    height: 75px;
    position: relative; */
}

#name {
    background-color: #4aaaa5;
    position:relative; 
    left: 220px;
}

#portfolio {
    margin-top: 30px;
}

